# petriz

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  load_terms.sh  main.py  pyproject.toml
api/: apps.py  auditing.py  caching.py  endpoints.py  permissions.py  utils.py
api/dependencies/: auditing.py  authentication.py  authorization.py  throttles.py  throttling.py
api/middlewares/: auditing.py
apps/accounts/: apps.py  crud.py  endpoints.py  models.py  schemas.py  validators.py
apps/audits/: apps.py  crud.py  endpoints.py  models.py  query.py  schemas.py
apps/clients/: apps.py  commands.py  crud.py  endpoints.py  models.py  permissions.py  query.py  schemas.py
apps/quizzes/: apps.py  crud.py  ddls.py  endpoints.py  models.py  query.py  schemas.py  utils.py
apps/search/: apps.py  commands.py  crud.py  ddls.py  endpoints.py  models.py  query.py  schemas.py
apps/tokens/: apps.py  auth_tokens.py  models.py  totps.py
core/: application.py  commands.py  endpoints.py  exception_handling.py  settings.py
core/settings/: development.py  development_settings.py  staging.py  staging_settings.py
migrations/: env.py
migrations/versions/: 020ace687117_.py  0408386dabfc_.py  09a700243f83_.py  09d036ccafe8_.py  0ad59a8842d4_.py  0fd91c6fb4ca_.py  1aa90cf71fa3_.py  1c86900b55d6_.py  280a2e931e07_.py  282bc349897c_.py  28b72e13a4c0_.py  2afb25eee260_.py  2d518f59d3c3_added_totp_models.py  30fc212d61ac_.py  37f2fd242160_.py  38b5e43fe9bf_.py  (+49 more)
scripts/: load_terms.sh
slb_terms/: drilling fluids.csv  drilling.csv  enhanced oil recovery.csv  formation evaluation.csv  general terms.csv  geochemistry.csv  geology.csv  geophysics.csv  heavy oil.csv  oil and gas business.csv  perforating.csv  production facilities.csv  production logging.csv  production testing.csv  production.csv  reservoir characterization.csv  shale gas.csv  well completions.csv  well testing.csv  well workover and intervention.csv
tests/: load_test_search.py
