[tool.poetry]
name = "petriz"
version = "0.1.0"
description = ""
authors = ["ti-oluwa <105179638+ti-oluwa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
ruff = "^0.5.0"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.2"
inflection = "^0.5.1"
asyncpg = "^0.29.0"
asgiref = "^3.8.1"
passlib = "^1.7.4"
fastapi-mail = "^1.4.1"
argon2-cffi = "^23.1.0"
aiofiles = "^24.1.0"
faker = "^33.1.0"
rich = "^13.9.4"
slb-glossary = "^0.0.1"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
